--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="img/avatar.jpg" alt="Imagen de Perfil">
                 </div>
 
-                <h3 class="wave-card-title">Eduardo Muñoz López</h3>
+                <h3 class="wave-card-title">Eduardo ML</h3>
                 <small class="wave-card-subtitle">Instructor de Tecnología 🧑‍💻</small>
                 <!-- Aquí inicia la tira de iconos de contacto -->
                 <div class="contact-icons">
